:lipstick: fix: Melhorando visibilidade dos projetos

--- a/src/index.css
+++ b/src/index.css
@@ -199,7 +199,7 @@ body {
   border-radius: 0px;
   width: 17em;
   height: 8.4em;
-  background-color: rgba(0, 0, 0, 0.397);
+  background-color: rgba(0, 0, 0, 0.055);
   color: #fff;
   border-bottom: 1px solid aquamarine;
   font-weight: 500;
